--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@react-three/rapier": "^1.3.1",
     "@types/three": "^0.164.1",
     "gsap": "^3.12.5",
     "next": "14.2.3",
