--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.16.6",
     "@react-three/rapier": "^1.3.1",
     "@types/three": "^0.164.1",
+    "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "next": "14.2.3",
