--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.3.1",
     "@types/three": "^0.164.1",
     "framer-motion": "^11.2.10",
