--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
+            "~/components/*": ["src/app/components/*"],
             "@/*": ["src/*"],
             "@public/*": ["public/*"]
         }
