--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "maath": "^0.10.7",
-    "next": "14.2.3",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.164.1"
